# GtestLearn

./: CMakeLists.txt  CompileAndRun.sh  README.md  main.cpp
.github/workflows/: c-cpp.yml
inc/: Condition.hh  Value.hh  assert_exp.hh  event_exp.hh  para_exp.hh
test/: test_main.cpp
